syntax = "proto3";

package marketplace.api.v1.marketplace;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/wrappers.proto";

option go_package = "marketplace";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

enum AssetStatus {
    option (gogoproto.goproto_enum_prefix) = false;
    option (gogoproto.enum_customname) = "AssetStatus";

    UNKNOWN_STATUS = 0 [(gogoproto.enumvalue_customname) = "AssetStatusUnknown"];
    PROCESSING = 1 [(gogoproto.enumvalue_customname) = "AssetStatusProcessing"];
    READY = 2 [(gogoproto.enumvalue_customname) = "AssetStatusReady"];
    FAILED = 3 [(gogoproto.enumvalue_customname) = "AssetStatusFailed"];
}

message AssetResponse {
    int64 id = 1;
    string content_type = 2;
    AssetStatus status = 3;

    google.protobuf.StringValue thumbnail_url = 4;
    google.protobuf.StringValue preview_url = 5;
    google.protobuf.StringValue encrypted_url = 6;
    
    google.protobuf.StringValue yt_video_id = 7;
}

message UploadAssetFromYoutubeRequest {
    string url = 1;
}
