syntax = "proto3";

package marketplace.api.v1.marketplace;

import "google/protobuf/wrappers.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "marketplace";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message CreatorResponse {
    int64 id = 1;
    string address = 2;
    google.protobuf.StringValue username = 3;
    google.protobuf.StringValue name = 4;
    google.protobuf.StringValue image_url = 5;
}

message CreatorRequest {
    int64 id = 1;
}

message CreatorsRequest {
    string q = 1;
    uint64 offset = 2;
    uint64 limit = 3;
}

message CreatorsResponse {
    repeated CreatorResponse items = 1;
    int64 total_count = 2;
    int64 count = 3;
    bool prev = 4;
    bool next = 5;
}

message ArtsByCreatorRequest {
    int64 creator_id = 1;
    uint64 offset = 2;
    uint64 limit = 3;
}
